# spa-eng-discord-website-backend-rs

./: Cargo.toml  Dockerfile  Makefile  README.md  backendspec.md
migrations/: 001_init.sql  002_movies.sql  003_seed_movies.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs
src/models/: link_report.rs  mod.rs  movie.rs  podcast.rs
src/repo/: link_report.rs  mod.rs  movie.rs  podcast.rs
src/routes/: health.rs  link_report.rs  mod.rs  movie.rs  podcast.rs
tests/: api.rs
